* Do not update the internal window state in case sending the message failed. * This is not perfect, but it makes Tracker catch up and redraw when the next   event is due. This improves the situation in bug #2212.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25708 a95241bf-73f2-0310-859d-f6bbb57e9c96